@@ -36,6 +36,7 @@ Changelog
  * Fix: Make sure page chooser search results correspond to the latest search by canceling previous requests (Esper Kuijs)
  * Fix: Inform user when moving a page from one parent to another where there is an already existing page with the same slug (Casper Timmers)
  * Fix: User add/edit forms now support form widgets with JS/CSS media (Damian Grinwis)
+ * Fix: Rich text processing now preserves non-breaking spaces instead of converting them to normal spaces (Wesley van Lee)
 
 
 2.4 (19.12.2018)
